# MCP-A2A-Log-agent

A2A-Multi-Agents-AgentCore-main/: Dockerfile  README.md  pyproject.toml  requirements-streamlit.txt  streamlit_app.py
A2A-Multi-Agents-AgentCore-main/multi-agents/: README.md  invoke_agent.py  retrieve_agent_card.py
A2A-Multi-Agents-AgentCore-main/multi-agents/host/: README.md  __init__.py  __main__.py  config.yaml  host_agent.py
A2A-Multi-Agents-AgentCore-main/multi-agents/monitoring_agent/: README.md  __main__.py  config.yaml  constants.py  invoke_with_token.py  memory_hook.py  monitoring_agent.py  requirements.txt  utils.py
A2A-Multi-Agents-AgentCore-main/multi-agents/monitoring_agent/gateway_creation/: create_gateway.py  gateway.md  setup_gateway.yaml
A2A-Multi-Agents-AgentCore-main/multi-agents/monitoring_agent/idp_setup/: setup_cognito.py
A2A-Multi-Agents-AgentCore-main/multi-agents/monitoring_agent/prompt_template/: monitoring_agent_prompt_template.txt
A2A-Multi-Agents-AgentCore-main/multi-agents/monitoring_agent/tools/: lambda_monitoring_tools.json
A2A-Multi-Agents-AgentCore-main/multi-agents/ops_orchestrator_agent/: README.md  __main__.py  config.yaml  constants.py  invoke_with_token.py  openAI_memory_tools.py  ops_remediation_agent.py  requirements.txt  utils.py
A2A-Multi-Agents-AgentCore-main/multi-agents/ops_orchestrator_agent/idp_setup/: cognito_config.json  setup_cognito.py
A2A-Multi-Agents-AgentCore-main/multi-agents/ops_orchestrator_agent/prompt_template/: ops_orchestrator_agent_prompt.txt
(+5 files in other folders)
